Updated bibtex library

--- a/text/bibtex/library_vitd.bib
+++ b/text/bibtex/library_vitd.bib
@@ -1599,7 +1599,11 @@
   Pages                    = {97--104},
   Volume                   = {98},
 
-  Abstract                 = {Context: Most studies examining associations between circulating vitamin D and disease are based on a single measure of vitamin D, which may not reflect levels over time, particularly because vitamin D concentrations vary by season. Few studies evaluated how well multiple 25-hydroxyvitamin D [25({OH)D]} measures track within the same individual over time. Objective: This study examined variability and reproducibility of vitamin D by evaluating repeat measurements of plasma 25({OH)D} concentrations while accounting for determinants of circulating concentrations including dietary supplement use and latitude of residence from a population of {U.S.} radiologic technologists. Design and Participants: We analyzed circulating 25({OH)D} in blood samples taken from 538 men and women from a prospective, nationwide study at two time points within a 1-yr period, most measured in different seasons. Inter- and intra-individual variability, reliability coefficients, and measurement error were examined. Results: The spearman rank correlation between two measurements of 25({OH)D} concentrations was moderate (r = 0.75, P {\textless} 0.001) and did not vary significantly by participant characteristics including age, race, or latitude. The intraclass correlation coefficient was 0.72 (95\% confidence interval = 0.68â0.76). The deattenuation factor of plasma 25({OH)D} levels was 1.39, suggesting that a single measure of vitamin D on a continuous scale in regression analyses may result in attenuated relationships of about 40\%. Conclusion: Our results suggest that a single blood sample obtained in spring or fall provides a reasonable average for 25({OH)D} over a 1-yr period, but additional studies are needed to estimate variability and agreement in plasma 25({OH)D} measurements over longer intervals and younger populations.},
+  Abstract                 = {Context: Most studies examining associations between circulating vitamin D and disease are based on a single measure of vitamin D, which may not reflect levels over time, particularly because vitamin D concentrations vary by season. Few studies evaluated how well multiple 25-hydroxyvitamin D [25({OH)D]} measures track within the same individual over time.
+Objective: This study examined variability and reproducibility of vitamin D by evaluating repeat measurements of plasma 25({OH)D} concentrations while accounting for determinants of circulating concentrations including dietary supplement use and latitude of residence from a population of {U.S.} radiologic technologists.
+Design and Participants: We analyzed circulating 25({OH)D} in blood samples taken from 538 men and women from a prospective, nationwide study at two time points within a 1-yr period, most measured in different seasons. Inter- and intra-individual variability, reliability coefficients, and measurement error were examined.
+Results: The spearman rank correlation between two measurements of 25({OH)D} concentrations was moderate (r = 0.75, P {\textless} 0.001) and did not vary significantly by participant characteristics including age, race, or latitude. The intraclass correlation coefficient was 0.72 (95\% confidence interval = 0.68â0.76). The deattenuation factor of plasma 25({OH)D} levels was 1.39, suggesting that a single measure of vitamin D on a continuous scale in regression analyses may result in attenuated relationships of about 40\%.
+Conclusion: Our results suggest that a single blood sample obtained in spring or fall provides a reasonable average for 25({OH)D} over a 1-yr period, but additional studies are needed to estimate variability and agreement in plasma 25({OH)D} measurements over longer intervals and younger populations.},
   ISSN                     = {0021-{972X}},
   Owner                    = {mullerd},
   Timestamp                = {2014.01.06}
@@ -2193,7 +2197,7 @@
   Journal                  = {Statistics in Medicine},
   Year                     = {2002},
   Number                   = {15},
-  Pages                    = {2175-2197},
+  Pages                    = {2175–2197},
   Volume                   = {21},
 
   Abstract                 = {Modelling of censored survival data is almost always done by Cox proportional-hazards regression. However, use of parametric models for such data may have some advantages. For example, non-proportional hazards, a potential difficulty with Cox models, may sometimes be handled in a simple way, and visualization of the hazard function is much easier. Extensions of the Weibull and log-logistic models are proposed in which natural cubic splines are used to smooth the baseline log cumulative hazard and log cumulative odds of failure functions. Further extensions to allow non-proportional effects of some or all of the covariates are introduced. A hypothesis test of the appropriateness of the scale chosen for covariate effects (such as of treatment) is proposed. The new models are applied to two data sets in cancer. The results throw interesting light on the behaviour of both the hazard function and the hazard ratio over time. The tools described here may be a step towards providing greater insight into the natural history of the disease and into possible underlying causes of clinical events. We illustrate these aspects by using the two examples in cancer. Copyright © 2002 John Wiley \& Sons, Ltd.},
@@ -2805,7 +2809,13 @@
   Pages                    = {e20796},
   Volume                   = {6},
 
-  Abstract                 = {Background A role for vitamin D in cancer risk reduction has been hypothesized, but few data exist for lung cancer. We investigated the relationship between vitamin D status, using circulating 25-hydroxyvitamin D [25({OH)D]}, and lung cancer risk in a nested case-control study within the Alpha-Tocopherol, Beta-Carotene Cancer Prevention Study of Finnish male smokers. Methods Lung cancer cases (n = 500) were randomly selected based on month of blood collection, and 500 controls were matched to them based on age and blood collection date. Odds ratios ({ORs)} and 95\% confidence intervals ({CIs)} were calculated using multivariate-adjusted conditional logistic regression. To account for seasonal variation in 25({OH)D} concentrations, season-specific and season-standardized quintiles of 25({OH)D} were examined, and models were also stratified on season of blood collection (darker season = {November–April} and sunnier season = {May–October).} Pre-determined, clinically-defined cutpoints for 25({OH)D} and 25({OH)D} as a continuous measure were also examined. Results Overall, 25({OH)D} was not associated with lung cancer. Risks were 1.08 (95\% {CI} 0.67–1.75) and 0.83 (95\% {CI} 0.53–1.31) in the highest vs. lowest season-specific and season-standardized quintiles of 25({OH)D}, respectively, and 0.91 (95\% {CI} 0.48–1.72) for the ≥75 vs. {\textless}25 {nmol/L} clinical categories. Inverse associations were, however, suggested for subjects with blood collections from {November–April}, with {ORs} of 0.77 (95\% {CI} 0.41–1.45, p-trend = 0.05) and 0.65 (95\% {CI} 0.37–1.14, p-trend = 0.07) in the highest vs. lowest season-specific and season-standardized quintiles of 25({OH)D}, respectively, and 0.61 (95\% {CI} 0.24–1.52, p-trend = 0.01) for ≥75 vs. {\textless}25 {nmol/L.} We also found 11\% lower risk for a 10 {nmol/L} increase in 25({OH)D} in the darker season based on the continuous measure ({OR} = 0.89, 95\% {CI} 0.81–0.98, p = 0.02). Conclusion In this prospective study of male smokers, circulating 25({OH)D} was not associated with lung cancer risk overall, although inverse associations were suggested among those whose blood was drawn during darker months.},
+  Abstract                 = {Background A role for vitamin D in cancer risk reduction has been hypothesized, but few data exist for lung cancer. We investigated the relationship between vitamin D status, using circulating 25-hydroxyvitamin D [25({OH)D]}, and lung cancer risk in a nested case-control study within the Alpha-Tocopherol, Beta-Carotene Cancer Prevention Study of Finnish male smokers.
+
+Methods Lung cancer cases (n = 500) were randomly selected based on month of blood collection, and 500 controls were matched to them based on age and blood collection date. Odds ratios ({ORs)} and 95\% confidence intervals ({CIs)} were calculated using multivariate-adjusted conditional logistic regression. To account for seasonal variation in 25({OH)D} concentrations, season-specific and season-standardized quintiles of 25({OH)D} were examined, and models were also stratified on season of blood collection (darker season = {November–April} and sunnier season = {May–October).} Pre-determined, clinically-defined cutpoints for 25({OH)D} and 25({OH)D} as a continuous measure were also examined.
+
+Results Overall, 25({OH)D} was not associated with lung cancer. Risks were 1.08 (95\% {CI} 0.67–1.75) and 0.83 (95\% {CI} 0.53–1.31) in the highest vs. lowest season-specific and season-standardized quintiles of 25({OH)D}, respectively, and 0.91 (95\% {CI} 0.48–1.72) for the ≥75 vs. {\textless}25 {nmol/L} clinical categories. Inverse associations were, however, suggested for subjects with blood collections from {November–April}, with {ORs} of 0.77 (95\% {CI} 0.41–1.45, p-trend = 0.05) and 0.65 (95\% {CI} 0.37–1.14, p-trend = 0.07) in the highest vs. lowest season-specific and season-standardized quintiles of 25({OH)D}, respectively, and 0.61 (95\% {CI} 0.24–1.52, p-trend = 0.01) for ≥75 vs. {\textless}25 {nmol/L.} We also found 11\% lower risk for a 10 {nmol/L} increase in 25({OH)D} in the darker season based on the continuous measure ({OR} = 0.89, 95\% {CI} 0.81–0.98, p = 0.02).
+
+Conclusion In this prospective study of male smokers, circulating 25({OH)D} was not associated with lung cancer risk overall, although inverse associations were suggested among those whose blood was drawn during darker months.},
   Shorttitle               = {Serum 25-Hydroxyvitamin D and Risk of Lung Cancer in Male Smokers}
 }
 
