Draft manuscript: no discussion

--- a/analysis/output/o08_descriptive_by_vitstat.tex
+++ b/analysis/output/o08_descriptive_by_vitstat.tex
@@ -51,6 +51,9 @@ Histology & Conventional RCC  & $357$ & \multicolumn{1}{@{\hspace{\tabcolsep}(}r
  & Other  & $\phantom{0}14$ & \multicolumn{1}{@{\hspace{\tabcolsep}(}r@{)\hspace{\tabcolsep}}}{$\phantom{0}3$} & $\phantom{00}4$ & \multicolumn{1}{@{\hspace{\tabcolsep}(}r@{)\hspace{\tabcolsep}}}{$\phantom{0}2$} & $\phantom{0}18$ \\
  & Unknown  & $\phantom{00}4$ & \multicolumn{1}{@{\hspace{\tabcolsep}(}r@{)\hspace{\tabcolsep}}}{$\phantom{0}1$} & $\phantom{0}23$ & \multicolumn{1}{@{\hspace{\tabcolsep}(}r@{)\hspace{\tabcolsep}}}{$11$} & $\phantom{0}27$ \\
  & \\ %  &  & \multicolumn{1}{@{\hspace{\tabcolsep}(}r@{)\hspace{\tabcolsep}}}{$100$} &  & \multicolumn{1}{@{\hspace{\tabcolsep}(}r@{)\hspace{\tabcolsep}}}{$100$} &  \\
- & missing  & $427$ & \multicolumn{1}{@{\hspace{\tabcolsep}(}r@{)\hspace{\tabcolsep}}}{$100$} & $203$ & \multicolumn{1}{@{\hspace{\tabcolsep}(}r@{)\hspace{\tabcolsep}}}{$100$} & $630$ \\
+Season-adjusted circulating 25(OH)D$_3$ category & 1 (lowest)  & $\phantom{0}93$ & \multicolumn{1}{@{\hspace{\tabcolsep}(}r@{)\hspace{\tabcolsep}}}{$22$} & $\phantom{0}63$ & \multicolumn{1}{@{\hspace{\tabcolsep}(}r@{)\hspace{\tabcolsep}}}{$31$} & $156$ \\
+ & 2  & $107$ & \multicolumn{1}{@{\hspace{\tabcolsep}(}r@{)\hspace{\tabcolsep}}}{$25$} & $\phantom{0}56$ & \multicolumn{1}{@{\hspace{\tabcolsep}(}r@{)\hspace{\tabcolsep}}}{$28$} & $163$ \\
+ & 3  & $106$ & \multicolumn{1}{@{\hspace{\tabcolsep}(}r@{)\hspace{\tabcolsep}}}{$25$} & $\phantom{0}46$ & \multicolumn{1}{@{\hspace{\tabcolsep}(}r@{)\hspace{\tabcolsep}}}{$23$} & $152$ \\
+ & 4 (highest)  & $121$ & \multicolumn{1}{@{\hspace{\tabcolsep}(}r@{)\hspace{\tabcolsep}}}{$28$} & $\phantom{0}38$ & \multicolumn{1}{@{\hspace{\tabcolsep}(}r@{)\hspace{\tabcolsep}}}{$19$} & $159$ \\
 \bottomrule 
 \end{tabular}
