--- a/text/vitd_rcc_surv.tex
+++ b/text/vitd_rcc_surv.tex
@@ -77,16 +77,34 @@ Institute, Brno, Czech Republic \newline
 %% #2 abstract
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{abstract}
-\textbf{Background:} \newline
-\textbf{Methods:} \newline
-\textbf{Results:} \newline
-\textbf{Conclusions:} \newline
+
 \end{abstract}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% #3 introduction
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \clearpage
+
+\section{abstract}
+\noindent \textbf{Background:} We assessed whether concentration of vitamin D 
+at diagnosis of renal cell carcinoma (RCC) is associated with prognosis.  
+\newline 
+\textbf{Methods:} We conducted a case-cohort study of 630 RCC cases from a 
+multi-centre case-control study in eastern Europe. Vitamin D was assessed as 
+25-Hydroxyvitamin D$_3$ [25(OH)D$_3$] using liquid chromatography coupled to 
+tandem mass spectrometry. we used weighted cox models to estimate hazard ratios 
+(HR) and 95\% Confidence Intervals (CI) by categories of season-adjusted 
+25(OH)D$_3$.\newline \textbf{Results:} Higher concentrations of 25(OH)D$_3$ 
+were 
+associated with lower risk of death after adjusting for stage, age, sex, and 
+country (HR highest versus lowest category 0.57, 95\% CI [0.34, 0.97]). there 
+was no evidence that the association varied by cause of death, though there was 
+a suggestion that it might be stronger for those diagnosed with early stage 
+disease. \newline 
+\textbf{Conclusions:} 25(OH)D$_3$ concentration at diagnosis 
+of RCC is inversely associated with risk of death. \newline
+
+
 \section*{Introduction}
 More than 300,000 kidney cancer cases are diagnosed yearly worldwide leading to 
 approximately 130,000 deaths \cite{ferlay_cancer_2013}. The prognosis is 
@@ -137,8 +155,8 @@ remaining, we randomly selected 500 participants at baseline (the subcohort).
 We also included all participants who died during follow-up that were not 
 randomly selected in to the subcohort ($N=93$), as well as 37 stage IV patients 
 that had survived and were not randomly selected, hence a total of 
-630 participants for laboratory analysis. Of these, one subject ended up being 
-classified as spindle cell sarcoma.
+630 participants for laboratory analysis. Of these, one participant ended up 
+being classified as spindle cell sarcoma.
 
 \subsection*{Biosample processing and biochemical analysis}
 Venous blood was obtained before or at the time of the nephrectomy, prior to 
@@ -191,7 +209,7 @@ participants with a stage IV tumor, and 15\% of those surviving to the end of
 follow-up had stage IV diagnoses. In contrast, 72 \% of those surviving to the 
 end of follow-up were diagnosed with stage I-II disease.
 
-Hazard of death from any cause was strongly and inversely associated with 
+Hazard of death from any cause was inversely associated with 
 circulating concentrations of 25(OH)D$_3$ (Table~2). After adjusting for 
 stage, age, and sex, the hazard was 43\% lower among those in the highest 
 compared to the lowest group of seasonally-adjusted concentration 
@@ -218,82 +236,44 @@ little statistical evidence of interaction with any of these factors.
 We investigated whether differences in circulating concentrations of 
 25(OH)D$_3$ at the time of diagnosis of RCC were associated with all-cause and 
 cause-specific survival. We observed that higher concentrations of 25(OH)D$_3$ 
-were associated with a substantially lower risk of death, and that the 
-associatin was not restricted to RCC specific death. We also observed an 
+were associated with a lower rate of death, and that the 
+association was not restricted to RCC specific death. We also observed an 
 indication that the strength of this association might vary by other factors.
 Most notably the association appeared somewhat stronger for those with a 
 history of hypertension, advanced age at diagosis, or eary stage disease.
 
-\clearpage
-\bibliographystyle{./bibtex/aje}
-\bibliography{./bibtex/library_vitd}
-\end{document}
-Previous reports of prospectively measured circulating 25(OH)D and risk of 
-kidney cancer have produced conflicting results. In accordance with our 
-results, the Copenhagen City Heart Study (CCHS), a cohort of 9791 people 
-including 55 incident kidney cancer cases, reported that a 50\% reduction in 
-25(OH)D was associated with increased risk (HR 1.34, 95\% CI [1.04, 1.73]) 
-\cite{afzal_low_2013}. In contrast, the vitamin D pooling project found no 
-association in an analysis of 775 case-control pairs nested within eight 
-prospective cohorts \cite{gallicchio_circulating_2010-1}. These discrepant 
-results are not readily explicable. One difference between the pooling project 
-and the present study is the method of adjustment for season. The pooling 
-project used conditional logistic regression models adjusted for season of blood 
-draw (summer/winter), with sensitivity analyses adjusted using the residuals 
-from a local polynomial regression \cite{gallicchio_circulating_2010}. 
-In contrast, we directly modelled seasonality using smooth trigonometric 
-functions. Another difference between the studies is that both the pooling 
-project and CCHS used a chemiluminescence immunoassay measuring both
-25(OH)D$_2$ and 25(OH)D$_3$, whereas in the present study we employed liquid 
-chromatography coupled to tandem mass spectrometry to quantify 25(OH)D$_3$ 
-specifically. That said, these 
-methodological differences would seem unlikely to fully account for the 
-discrepant results which remain unexplained. 
+This investigation was motivated by our recent study of circulating 25(OH)D$_3$ 
+and risk of RCC in the prospective EPIC cohort [Muller et al., in press], in 
+which we observed an inverse association between 25(OH)D$_3$ and risk of RCC. 
+Pre-diagnostic 25(OH)D$_3$ was also associated with post RCC mortality, with 
+both low and high concentrations associated with an increased rate of death 
+among RCC cases. The results from the present study are not completely 
+consistent with these initial findings. We found no evidence of increased rate 
+of death among patients with high 25(OH)D$_3$ at diagnosis, but rather an 
+inverse association between 25(OH)D$_3$ and all-cause mortality accross the 
+range of observed concentrations.
 
-There is a large literature investigating circulating vitamin D and all-cause 
+There is a large literature regarding circulating vitamin D and all-cause 
 mortality in general populations. Consistent with our observation, many studies 
 have reported increased risk of death for people with low concentrations 
 \cite{schottker_strong_2013, virtanen_association_2011, hutchinson_low_2010, 
 szulc_serum_2009, semba_low_2009, pilz_vitamin_2009, 
-melamed_ml_25-hydroxyvitamin_2008, jia_nutritional_2007}. This suggests that 
-the association observed in our study may not be specific to post RCC survival, 
-but rather a reflection of a general phenomenon. Our observation that high 
-levels of 25(OH)D$_3$ might be associated with increased risk of death is 
-consistent with results from the Uppsala Longitudinal Study of Adult Men, which 
-also suggest a U-shaped association \cite{michaelsson_plasma_2010}. Despite 
-this accord, further studies are required to investigate the intriguing 
-possibility that both low and high concentrations are associated with all-cause 
-mortality.
+melamed_ml_25-hydroxyvitamin_2008, jia_nutritional_2007}, suggesting that 
+the association observed in our study might reflect a general phenomenon rather 
+than something specific to mortality post RCC diagnosis. This would be 
+consistent with our observation that any association might be stronger among 
+those patients diagnosed with early rather than advanced stage tumours. The 
+lack of heterogeneity of the association by cause of death in our study also 
+provides indirect evidence that an association between vitamin D and mortality 
+is unlikely to reflect something specific to RCC. 
 
-The principal limitation of our study is that 25(OH)D$_3$ was measured using a 
-single blood sample drawn in adulthood. While individual vitamin D measurements 
-are reasonably reproducible, intra-individual variation may still be important 
-\cite{major_variability_2013}. Further, it is possible that this single  
-measurement in adulthood does not capture exposure to vitamin D in an 
-etiologically relevant period. 
-
-Our study does have several strengths. Importantly, our sample includes 
-participants from 10 European countries from differing geographic latitudes, 
-and a wide range of 25(OH)D$_3$ concentrations. Biospecimen handling was 
-standardised, and quantification of circulating 25(OH)D$_3$ took place in a 
-single laboratory, thus minimising systematic inter-laboratory variation. The 
-prospective design of our study, in which 25(OH)D$_3$ concentrations were 
-assessed using blood collected prior to diagnosis, minimises the chance that 
-any differences between cases and controls are caused by existing tumours. 
-Further, the availability of detailed information on potential confounders -- 
-particularly the inclusion of circulating cotinine as a biomarker of current 
-smoking intensity and creatinine as a marker of renal function --  affords 
-additional confidence that the observed associations are not due to residual 
-confounding. 
-
-In conclusion, we found that low concentrations of 25(OH)D$_3$ were associated 
-with increased risk of RCC as well as lower all-cause mortality among RCC 
-cases. High concentrations of 25(OH)D$_3$ might also be associated with 
-increased risk of all-cause mortality among RCC cases.
+In summary, we found that high 25(OH)D$_3$ at diagnosis of RCC was associated 
+with lower risk of death. This association was not restricted to RCC 
+cause-specific death, and appeared stronger for early stage disease, suggesting 
+that it might reflect a more general phenomenon rather than something 
+specific to post RCC survival.  
 
 \section*{acknowledgements}
-
-
 \noindent Funding:
 The World Cancer Research Fund (UK) supported the biochemical analyses. The 
 funding organization had no role in design and conduct of the study; collection, 
@@ -309,6 +289,8 @@ Council Australia.
 \clearpage
 \bibliographystyle{./bibtex/aje}
 \bibliography{./bibtex/library_vitd}
+\end{document}
+
 
 \clearpage
 \section*{Tables}
@@ -327,82 +309,4 @@ Council Australia.
 
 
 \section*{Figure legends}
-\noindent \textbf{Figure 1.} Seasonal variation of 25(OH)D$_3$ 
-concentrations. Scattered points show the measured values. The solid line 
-represents the predicted geometric mean concentration given day of blood draw, 
-which was modeled as a linear combination of sine and cosine functions. See the 
-text of the methods section for further details. Estimates and data are from a 
-nested European Prospective investigation into Cancer and Nutrition (EPIC) 
-study, 
-which recruited participants between 1992 and 2000. \newline \newline
-
-\noindent \textbf{Figure 2.} Odds ratio for RCC as a function of 
-circulating  concentration of 25(OH)D$_3$, relative to a concentration of 
-50~nmol/L. Log-base-2 25(OH)D$_3$ was modeled as a continuous 
-covariate. Solid and dashed 
-lines represent the maximum likelihood estimates and 95\% 
-confidence intervals respectively. The translucent lines are 1000 draws from 
-the 
-multivariate normal distribution defined by the maximum likelihood estimates 
-and 
-their variance covariance matrix, and thus give an indication of the posterior 
-density for the odds ratio under a uniform prior on the regression 
-coefficients. 
-The ``rug plot'' under each panel shows the observed distribution of 
-25(OH)D$_3$. Estimates and data are from a nested case-control sample within 
-the European Prospective investigation into Cancer and Nutrition (EPIC) study, 
-which recruited participants between 1992 and 2000. \newline
-\noindent Panel A) Estimates adjusted for age at baseline, sex, country, and 
-seasonality (sine and cosine functions of day of blood draw).  \newline 
-\noindent Panel B) Estimates after additional adjustment for smoking status at 
-baseline (never/former/current), circulating cotinine (quartiles defined among 
-the controls), alcohol intake at recruitment (g/day), and body mass index 
-(kg/m$^2$).  \newline \newline
-
-\noindent \textbf{Figure 3.} Stratified odds ratios (95\% CI) for 
-RCC for a doubling in concentration of 25(OH)D$_3$. Estimates are adjusted for 
-age at baseline, sex, country, seasonality (sine and cosine functions of day of 
-blood draw), smoking status at baseline (never/former/current), circulating 
-cotinine (quartiles defined among the controls), alcohol intake at recruitment 
-(g/day), and body mass index (kg/m$^2$). Estimates are from a nested 
-case-control sample within the European Prospective investigation into Cancer 
-and Nutrition (EPIC) study, which recruited participants between 1992 and 2000. 
-\newline
-$^a$P-value from likelihood ratio test of interaction terms. \newline
-Abbreviations: OR, Odds Ratio; CI, Confidence Interval; BMI, Body Mass Index.  
-\newline \newline
-
-\noindent \textbf{Figure 4. Post RCC survival. Estimates from a nested 
-case-control sample within the European Prospective investigation into Cancer 
-and Nutrition (EPIC) study, which recruited participants between 1992 and 
-2000.} \newline
-\noindent Panel A) Hazard ratio from a Cox model for all cause mortality post 
-RCC 
-diagnosis as a function of circulating concentration of 25(OH)D$_3$, 
-relative to a concentration of 50~nmol/L. 25(OH)D$_3$ was modeled 
-using 
-restricted cubic splines with knots at the 10th, 33rd, 67th, and 90th 
-percentiles of its distribution. The model was adjusted for age at baseline, 
-sex, country, and seasonality (sine and cosine functions of day of blood draw), 
-smoking status at baseline (never/former/current), circulating cotinine 
-(quartiles defined among the controls), alcohol intake at recruitment (g/day), 
-and body mass index (kg/m$s^2$). Solid and 
-dashed lines represent the maximum likelihood estimates and 95\% confidence 
-intervals respectively. The translucent lines are 1000 draws from the 
-multivariate normal distribution defined by the maximum likelihood estimates 
-and 
-their variance covariance matrix, and thus give an indication of the posterior 
-density for the hazard ratio under a uniform prior on the regression 
-coefficients. The ``rug plot'' shows the observed distribution of 
-25(OH)D$_3$. 
-\newline 
-\noindent Panel B) Survival function post RCC diagnosis evaluated at given 
-concentrations 
-of 25(OH)D$_3$, derived from a flexible parametric survival model. 
-Restricted cubic splines with knots at the 0th, 33rd, 67th, and 100th 
-percentiles of the distribution of uncensored survival times were used to model 
-the baseline hazard. Like the Cox model used to derive panel A, 
-25(OH)D$_3$ was modeled using restricted cubic splines with knots at 
-the 10th, 33rd, 67th, and 90th percentiles of its distribution.
-
 \end{document}
