Add details sample storage and transport again. Cut a few words.

--- a/text/vitd_rcc_surv.tex
+++ b/text/vitd_rcc_surv.tex
@@ -77,6 +77,22 @@ Institute, Brno, Czech Republic \newline
 %% #2 abstract
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{abstract}
+\noindent \textbf{Background:} We assessed whether concentrations of vitamin D 
+at diagnosis of renal cell carcinoma (RCC) is associated with prognosis.  
+\newline 
+\textbf{Methods:} We conducted a case-cohort study of 630 RCC cases from a 
+multi-centre case-control study in eastern Europe. Vitamin D was assessed as 
+25-Hydroxyvitamin D$_3$ [25(OH)D$_3$]. We used weighted Cox models to estimate 
+hazard ratios (HR) and 95\% Confidence Intervals (CI) by categories of 
+season-adjusted 25(OH)D$_3$.\newline 
+\textbf{Results:} Higher concentrations of 25(OH)D$_3$ 
+were associated with lower risk of death after adjusting for stage, age, sex, 
+and country (HR highest versus lowest category 0.57, 95\% CI [0.34, 0.97]). 
+This association did not vary by cause of death, though there was a suggestion 
+that it might be stronger for those diagnosed with early stage disease. 
+\newline 
+\textbf{Conclusions:} 25(OH)D$_3$ concentration at diagnosis 
+of RCC is inversely associated with risk of death. \newline
 
 \end{abstract}
 
@@ -84,25 +100,6 @@ Institute, Brno, Czech Republic \newline
 %% #3 introduction
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \clearpage
-
-\section{abstract}
-\noindent \textbf{Background:} We assessed whether concentration of vitamin D 
-at diagnosis of renal cell carcinoma (RCC) is associated with prognosis.  
-\newline 
-\textbf{Methods:} We conducted a case-cohort study of 630 RCC cases from a 
-multi-centre case-control study in eastern Europe. Vitamin D was assessed as 
-25-Hydroxyvitamin D$_3$ [25(OH)D$_3$] using liquid chromatography coupled to 
-tandem mass spectrometry. we used weighted cox models to estimate hazard ratios 
-(HR) and 95\% Confidence Intervals (CI) by categories of season-adjusted 
-25(OH)D$_3$.\newline \textbf{Results:} Higher concentrations of 25(OH)D$_3$ 
-were 
-associated with lower risk of death after adjusting for stage, age, sex, and 
-country (HR highest versus lowest category 0.57, 95\% CI [0.34, 0.97]). there 
-was no evidence that the association varied by cause of death, though there was 
-a suggestion that it might be stronger for those diagnosed with early stage 
-disease. \newline 
-\textbf{Conclusions:} 25(OH)D$_3$ concentration at diagnosis 
-of RCC is inversely associated with risk of death. \newline
 
 
 \section*{Introduction}
@@ -112,18 +109,18 @@ strongly dependent on stage at diagnosis, with around 90\% of stage I patients
 alive five years after diagnosis, comparted with only 10\% of stage IV patients 
 \cite{CRUK_kidney_2014}.
 
-Little is known on factors influencing survival after diagnosis of kidney 
+Little is known about factors influencing survival after diagnosis of kidney 
 cancer, apart from tumor stage and grade. We recently investigated circulating 
 vitamin D and kidney cancer onset and survival in a prospective epidemiological 
-cohort where blood samples were collected at entry in the cohort, an average 
+cohort where blood samples were collected at entry to the cohort, an average 
 of 7 years before diagnosis [Muller et al., in press]. We reported an inverse 
 association between vitamin D concentrations and risk of subsequent kidney 
-cancer, and an increased rate of death after kidney cance diagnosis for both 
+cancer, and an increased rate of death after kidney cancer diagnosis for both 
 low and high concentrations of vitamin D. Available data did not allow thorough 
 analysis of cause-specific mortality, nor were we able to adjust for stage. This 
-observation prompted us to investigate whether vitamin B6 levels at diagnosis of 
-kidney cancer are predictive of subsequent survival, independent of stage or 
-other prognostic factors.   
+observation prompted us to investigate whether vitamin D concentrations at  
+diagnosis of kidney cancer are associated with subsequent survival, independent 
+of stage or other prognostic factors.   
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% #3 methods 
@@ -133,17 +130,15 @@ other prognostic factors.
 Participants included patients who were above 18 years of age and diagnosed 
 with kidney cancer in one of 6 participating centres in Czech Republic (4 
 centres), Romania (Bucharest), and Russia (Moscow). After obtaining informed 
-consent, participants were given a standardized face-to-face short lifestyle 
+consent, participants were given a standardized face-to-face lifestyle 
 questionnaire covering socio-demographic characteristics, anthropometric 
 measures, medical history, family history, and tobacco and alcohol use. 
 Clinical and pathological data were abstracted from medical charts and 
 pathological reports. A majority of participants underwent nephrectomy and the 
 tumor was histologically confirmed. Follow-up for outcome (relapse, vital 
 status, and cause of death where relevant) was performed every 6 to 12 months 
-after diagnosis, using passive follow-up methods where possible (with 
-confirmation of vital status through active follow-up methods in case of 
-uncertainties) and active follow-up methods when no linkage to databases was 
-possible.
+after diagnosis, using passive follow-up methods where possible and active 
+follow-up methods when no linkage to databases was possible.
 
 \subsection*{Case-cohort sampling}
 Among 2330 participants with questionnaire data available and a diagnosis of 
@@ -160,8 +155,13 @@ being classified as spindle cell sarcoma.
 
 \subsection*{Biosample processing and biochemical analysis}
 Venous blood was obtained before or at the time of the nephrectomy, prior to 
-any treatment. Details of blood collection, storage, and transport have 
-been described previously [CITATION]. Liquid chromatography coupled to tandem 
+any treatment. Blood was collected in vacutainers containing 
+ethylenediaminetetraacetic acid (EDTA), and processed as rapidly as possible 
+(usually within two hours) to temporary store plasma samples at -80C in all 
+centers, except in Ceske Budejovice where samples were stored at -20C. Samples 
+were transported at -80C to IARC for central storage at -150C. Samples 
+underwent a single thawing cycle for aliquoting of 400uL for shipment at -80C 
+to the laboratory for analysis. Liquid chromatography coupled to tandem 
 mass spectrometry was used to separately analyse vitamin D as 25(OH)D$_2$ and 
 25(OH)D$_3$ \cite{midttun_determination_2011}. 25(OH)D$_2$ was undetectable in 
 the majority of samples, so our analyses focus on 25(OH)D$_3$. The lab is DEQAS 
@@ -181,7 +181,7 @@ percentiles, explicitly adjusting for seasonality by including the pair of sine
 and cosine functions. HRs for cause-specific mortality were calculated in a 
 competing risks model using the data augmentation method 
 \cite{lunn_applying_1995}. To account for the case-cohort design 
-\cite{prentice_case-cohort_1986} we used Barlow's method to weight the 
+\cite{prentice_case-cohort_1986}, we used Barlow's method to weight the 
 likelihood and computed robust variance estimates \cite{barlow_robust_1994, 
 barlow_analysis_1999}. We investigated potential effect modification by fitting 
 interactions between season-adjusted log$_2$ 25(OH)D$_3$ and various factors. 
@@ -200,7 +200,7 @@ Corporation, College Station, Texas, US) and R version 3.1.1 \cite{r_2014}.
 \section*{Results}
 Demographic and clinical characteristics of the study sample by vital status at 
 the end of follow-up are presented in Table~1. The sample included a higher 
-proportion of men (63\%) than women, and were predominantly recruited from the 
+proportion of men (63\%) than women, and was predominantly recruited from the 
 Czech Republic (52\%) and Russia (43\%), with only 5\% or participants 
 recruited in Romania. Those participants who survived to the end of follow-up 
 had a similar age distribution to those who died during follow-up. 518 
@@ -255,17 +255,17 @@ range of observed concentrations.
 
 There is a large literature regarding circulating vitamin D and all-cause 
 mortality in general populations. Consistent with our observation, many studies 
-have reported increased risk of death for people with low concentrations 
+have reported high risk of death for people with low concentrations 
 \cite{schottker_strong_2013, virtanen_association_2011, hutchinson_low_2010, 
 szulc_serum_2009, semba_low_2009, pilz_vitamin_2009, 
 melamed_ml_25-hydroxyvitamin_2008, jia_nutritional_2007}, suggesting that 
 the association observed in our study might reflect a general phenomenon rather 
-than something specific to mortality post RCC diagnosis. This would be 
-consistent with our observation that any association might be stronger among 
-those patients diagnosed with early rather than advanced stage tumours. The 
-lack of heterogeneity of the association by cause of death in our study also 
-provides indirect evidence that an association between vitamin D and mortality 
-is unlikely to reflect something specific to RCC. 
+than something specific to RCC prognosis. This would be consistent with our 
+observation that any association might be stronger among those patients 
+diagnosed with early rather than advanced stage tumours. The lack of 
+heterogeneity by cause of death provides additional indirect evidence that the 
+association between vitamin D and mortality is unlikely to exist exclusively 
+among RCC patients. 
 
 In summary, we found that high 25(OH)D$_3$ at diagnosis of RCC was associated 
 with lower risk of death. This association was not restricted to RCC 
@@ -273,7 +273,7 @@ cause-specific death, and appeared stronger for early stage disease, suggesting
 that it might reflect a more general phenomenon rather than something 
 specific to post RCC survival.  
 
-\section*{acknowledgements}
+\section*{Acknowledgements}
 \noindent Funding:
 The World Cancer Research Fund (UK) supported the biochemical analyses. The 
 funding organization had no role in design and conduct of the study; collection, 
