Fix table and figure captions

--- a/text/tables_and_figures.tex
+++ b/text/tables_and_figures.tex
@@ -53,7 +53,7 @@ status at the end of follow-up.}
 %% HR table
 \begin{table}
 \caption{Hazard ratios (HR) [95\% confidence intervals (CI)] for risk of all 
-cause and cause specific mortality by categories of circulating vitamin D$_3$ 
+cause and cause specific mortality by categories of 25(OH)D$_3$ 
 concentration.}
 \begin{tabular}{lrrrrrrrr}
 \toprule
@@ -106,9 +106,9 @@ regression coefficients. The ``rug plot'' shows the observed distribution of
 \begin{figure}
  \centering
 \caption{Hazard ratios (HR) and 95\% confidence intervals (CI) for a 
-doubling in vitamin D$_3$ concentration by potential effect modifiers. 
-\footnotesize{Estimates derived from Cox models stratified by country of 
-recruitment, and adjusted for stage, age at recruitment, and sex. $p$-values 
+doubling in season-adjusted 25(OH)D$_3$ concentration by potential effect 
+modifiers. \footnotesize{Estimates derived from Cox models stratified by country 
+of recruitment, and adjusted for stage, age at recruitment, and sex. $p$-values 
 are from Wald tests of the interaction terms.}}
 \includegraphics[width=14cm]{../analysis/output/g09_interactions.pdf}
 \end{figure}
