Automatically create RTF version

--- a/text/vitd_rcc_surv.tex
+++ b/text/vitd_rcc_surv.tex
@@ -83,7 +83,7 @@ at diagnosis of renal cell carcinoma (RCC) is associated with prognosis.
 \textbf{Methods:} We conducted a case-cohort study of 630 RCC cases from a 
 multi-centre case-control study in eastern Europe. Vitamin D was assessed as 
 25-Hydroxyvitamin D$_3$ [25(OH)D$_3$]. We used weighted Cox models to estimate 
-hazard ratios (HR) and 95\% Confidence Intervals (CI) by categories of 
+hazard ratios (HR) and 95\% confidence intervals (CI) by categories of 
 season-adjusted 25(OH)D$_3$.\newline 
 \textbf{Results:} Higher concentrations of 25(OH)D$_3$ 
 were associated with lower risk of death after adjusting for stage, age, sex, 
@@ -250,7 +250,7 @@ both low and high concentrations associated with an increased rate of death
 among RCC cases. The results from the present study are not completely 
 consistent with these initial findings. We found no evidence of increased rate 
 of death among patients with high 25(OH)D$_3$ at diagnosis, but rather an 
-inverse association between 25(OH)D$_3$ and all-cause mortality accross the 
+inverse association between 25(OH)D$_3$ and all-cause mortality across the 
 range of observed concentrations.
 
 There is a large literature regarding circulating vitamin D and all-cause 
