--- a/text/bibtex/library_vitd.bib
+++ b/text/bibtex/library_vitd.bib
@@ -1069,7 +1069,7 @@
 }
 
 @Article{hutchinson_low_2010,
-  Title                    = {Low serum 25-hydroxyvitamin D levels are associated with increased all-cause mortality risk in a general population: the Troms\o¸ study},
+  Title                    = {Low serum 25-hydroxyvitamin D levels are associated with increased all-cause mortality risk in a general population: the Troms\o study},
   Author                   = {Hutchinson, Moira Strand and Grimnes, Guri and Joakimsen, Ragnar Martin and Figenschau, Yngve and Jorde, Rolf},
   Journal                  = {European Journal of Endocrinology},
   Year                     = {2010},
@@ -1687,6 +1687,21 @@
   Urldate                  = {2014-05-15}
 }
 
+@Article{midttun_determination_2011,
+  Title                    = {Determination of vitamins A, D and E in a small volume of human plasma by a high-throughput method based on liquid chromatography/tandem mass spectrometry},
+  Author                   = {Midttun, {\O}ivind and Ueland, Per M.},
+  Journal                  = {Rapid Communications in Mass Spectrometry},
+  Year                     = {2011},
+  Number                   = {14},
+  Pages                    = {1942–1948},
+  Volume                   = {25},
+
+  Abstract                 = {We have developed an automated high-throughput assay for the determination of vitamin A (retinol), ergocalciferol (25-{OH} D2), cholecalciferol (25-{OH} D3) and vitamin E (α-tocopherol) in a small volume of human plasma. Sample preparation involved mixing 50 {μL} of plasma with 100 {μL} of ethanol containing isotope-labelled internal standards, followed by mixing with isooctane/chloroform (3:1, 300 {μL).} The organic phase was evaporated, and the sample reconstituted in 50 {μL} methanol. The analysis was performed using reversed-phase liquid chromatography with a gradient mobile phase containing water, methanol and ammonium formate. Chromatographic run-time was 5 min, and positive mode electrospray tandem mass spectrometry ({MS/MS)} was used for detection. The limits of detection were 0.10 {μM} for all-trans retinol and 3.3 {nM} for 25-{OH} D2 and 25-{OH} D3. Recoveries were 91.9–105.0\%, and within- and between-day coefficients of variance ({CVs)} 2.4–5.3 and 3.1–8.2, respectively. The assay is presently being used in large-scale studies. Copyright © 2011 John Wiley \& Sons, Ltd.},
+  Copyright                = {Copyright © 2011 John Wiley \& Sons, Ltd.},
+  ISSN                     = {1097-0231},
+  Language                 = {en}
+}
+
 @Article{midttun_low_2011,
   Title                    = {Low Plasma Vitamin B-6 Status Affects Metabolism through the Kynurenine Pathway in Cardiovascular Patients with Systemic Inflammation},
   Author                   = {Midttun, {\O}ivind and Ulvik, Arve and Pedersen, Eva Ringdal and Ebbing, Marta and Bleie, {\O}yvind and Schartum-Hansen, Hall and Nilsen, Roy Miodini and Nyg{\aa}rd, Ottar and Ueland, Per M.},
@@ -1708,21 +1723,6 @@
   Timestamp                = {2014.07.16},
   Url                      = {http://jn.nutrition.org/content/141/4/611},
   Urldate                  = {2014-05-15}
-}
-
-@Article{midttun_determination_2011,
-  Title                    = {Determination of vitamins A, D and E in a small volume of human plasma by a high-throughput method based on liquid chromatography/tandem mass spectrometry},
-  Author                   = {Midttun, Øivind and Ueland, Per M.},
-  Journal                  = {Rapid Communications in Mass Spectrometry},
-  Year                     = {2011},
-  Number                   = {14},
-  Pages                    = {1942–1948},
-  Volume                   = {25},
-
-  Abstract                 = {We have developed an automated high-throughput assay for the determination of vitamin A (retinol), ergocalciferol (25-{OH} D2), cholecalciferol (25-{OH} D3) and vitamin E (α-tocopherol) in a small volume of human plasma. Sample preparation involved mixing 50 {μL} of plasma with 100 {μL} of ethanol containing isotope-labelled internal standards, followed by mixing with isooctane/chloroform (3:1, 300 {μL).} The organic phase was evaporated, and the sample reconstituted in 50 {μL} methanol. The analysis was performed using reversed-phase liquid chromatography with a gradient mobile phase containing water, methanol and ammonium formate. Chromatographic run-time was 5 min, and positive mode electrospray tandem mass spectrometry ({MS/MS)} was used for detection. The limits of detection were 0.10 {μM} for all-trans retinol and 3.3 {nM} for 25-{OH} D2 and 25-{OH} D3. Recoveries were 91.9–105.0\%, and within- and between-day coefficients of variance ({CVs)} 2.4–5.3 and 3.1–8.2, respectively. The assay is presently being used in large-scale studies. Copyright © 2011 John Wiley \& Sons, Ltd.},
-  Copyright                = {Copyright © 2011 John Wiley \& Sons, Ltd.},
-  ISSN                     = {1097-0231},
-  Language                 = {en}
 }
 
 @Article{moch_biomarkers_2014,
@@ -2805,10 +2805,7 @@
   Pages                    = {e20796},
   Volume                   = {6},
 
-  Abstract                 = {Background A role for vitamin D in cancer risk reduction has been hypothesized, but few data exist for lung cancer. We investigated the relationship between vitamin D status, using circulating 25-hydroxyvitamin D [25({OH)D]}, and lung cancer risk in a nested case-control study within the Alpha-Tocopherol, Beta-Carotene Cancer Prevention Study of Finnish male smokers.
-Methods Lung cancer cases (n = 500) were randomly selected based on month of blood collection, and 500 controls were matched to them based on age and blood collection date. Odds ratios ({ORs)} and 95\% confidence intervals ({CIs)} were calculated using multivariate-adjusted conditional logistic regression. To account for seasonal variation in 25({OH)D} concentrations, season-specific and season-standardized quintiles of 25({OH)D} were examined, and models were also stratified on season of blood collection (darker season = {November–April} and sunnier season = {May–October).} Pre-determined, clinically-defined cutpoints for 25({OH)D} and 25({OH)D} as a continuous measure were also examined.
-Results Overall, 25({OH)D} was not associated with lung cancer. Risks were 1.08 (95\% {CI} 0.67–1.75) and 0.83 (95\% {CI} 0.53–1.31) in the highest vs. lowest season-specific and season-standardized quintiles of 25({OH)D}, respectively, and 0.91 (95\% {CI} 0.48–1.72) for the ≥75 vs. {\textless}25 {nmol/L} clinical categories. Inverse associations were, however, suggested for subjects with blood collections from {November–April}, with {ORs} of 0.77 (95\% {CI} 0.41–1.45, p-trend = 0.05) and 0.65 (95\% {CI} 0.37–1.14, p-trend = 0.07) in the highest vs. lowest season-specific and season-standardized quintiles of 25({OH)D}, respectively, and 0.61 (95\% {CI} 0.24–1.52, p-trend = 0.01) for ≥75 vs. {\textless}25 {nmol/L.} We also found 11\% lower risk for a 10 {nmol/L} increase in 25({OH)D} in the darker season based on the continuous measure ({OR} = 0.89, 95\% {CI} 0.81–0.98, p = 0.02).
-Conclusion In this prospective study of male smokers, circulating 25({OH)D} was not associated with lung cancer risk overall, although inverse associations were suggested among those whose blood was drawn during darker months.},
+  Abstract                 = {Background A role for vitamin D in cancer risk reduction has been hypothesized, but few data exist for lung cancer. We investigated the relationship between vitamin D status, using circulating 25-hydroxyvitamin D [25({OH)D]}, and lung cancer risk in a nested case-control study within the Alpha-Tocopherol, Beta-Carotene Cancer Prevention Study of Finnish male smokers. Methods Lung cancer cases (n = 500) were randomly selected based on month of blood collection, and 500 controls were matched to them based on age and blood collection date. Odds ratios ({ORs)} and 95\% confidence intervals ({CIs)} were calculated using multivariate-adjusted conditional logistic regression. To account for seasonal variation in 25({OH)D} concentrations, season-specific and season-standardized quintiles of 25({OH)D} were examined, and models were also stratified on season of blood collection (darker season = {November–April} and sunnier season = {May–October).} Pre-determined, clinically-defined cutpoints for 25({OH)D} and 25({OH)D} as a continuous measure were also examined. Results Overall, 25({OH)D} was not associated with lung cancer. Risks were 1.08 (95\% {CI} 0.67–1.75) and 0.83 (95\% {CI} 0.53–1.31) in the highest vs. lowest season-specific and season-standardized quintiles of 25({OH)D}, respectively, and 0.91 (95\% {CI} 0.48–1.72) for the ≥75 vs. {\textless}25 {nmol/L} clinical categories. Inverse associations were, however, suggested for subjects with blood collections from {November–April}, with {ORs} of 0.77 (95\% {CI} 0.41–1.45, p-trend = 0.05) and 0.65 (95\% {CI} 0.37–1.14, p-trend = 0.07) in the highest vs. lowest season-specific and season-standardized quintiles of 25({OH)D}, respectively, and 0.61 (95\% {CI} 0.24–1.52, p-trend = 0.01) for ≥75 vs. {\textless}25 {nmol/L.} We also found 11\% lower risk for a 10 {nmol/L} increase in 25({OH)D} in the darker season based on the continuous measure ({OR} = 0.89, 95\% {CI} 0.81–0.98, p = 0.02). Conclusion In this prospective study of male smokers, circulating 25({OH)D} was not associated with lung cancer risk overall, although inverse associations were suggested among those whose blood was drawn during darker months.},
   Shorttitle               = {Serum 25-Hydroxyvitamin D and Risk of Lung Cancer in Male Smokers}
 }
 
